schema.org added + new favicon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 
 </head>
-<body>
+<body vocab="http://schema.org/" typeof="Painting">
 	<div class="header">
 		<div class="start-animation">
     	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 555 255">
@@ -66,10 +66,10 @@
 	<section class="main-text">
 	 	<div class="container main-text-content">
 
-			<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
+			<h1 property="name">Студия "Акварель" - самые уютные курсы рисования в Минске.</h1>
 
 			<div class="main-block-1">
-				<p>Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответветсвующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
+				<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответветсвующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
 				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
 				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
 				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
@@ -77,7 +77,7 @@
 			</div>
 
 			<div class="main-img-1">
-				<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель">
+				<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель" property="image">
 			</div>
 
 			<div class="main-img-2">
@@ -97,7 +97,7 @@
 			</div>
 
 			<div class="main-img-3">
-				<img src="images/main-room.jpg" alt="На студии Акварель идут занятия - готовим поступать">
+				<img src="images/main-room.jpg" alt="На студии Акварель идут занятия - готовим поступать" property="image">
 			</div>
 			<div class="main-img-4">
 				<img src="images/main-exit.jpg" alt="Зелень вокруг - студия Акварель">
@@ -140,21 +140,21 @@
 		<canvas id="canvas-basic"></canvas>
 	 </section>
 
-	 <section class="courses">
+	 <section class="courses" property="mainEntityOfPage">
 	 	<div class="container">
 	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
 		
-			<div class="courses-list">
+			<div class="courses-list" property="makesOffer">
 
 				<div class="course-card course-1">
 					<div class="course-image">
 						<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Академический рисунок для поступающих".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
 							<p>Подростковая группа (14-18 лет).</p>
 						</div>
@@ -169,10 +169,10 @@
 						<img src="images/academ-risunok-vzr.jpg" alt="Курсы по академическому рисунку по программе академии искусств">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Академический рисунок".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
@@ -187,10 +187,10 @@
 						<img src="images/academ-jivopis.jpg" alt="Курсы по академичеcкой живописи в Минске. Подготовка к поступлению.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Академическая живопись для поступающих".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
 							<p>Подростковая группа (14-18 лет)</p>
 						</div>
@@ -205,10 +205,10 @@
 						<img src="images/academ-jivopis-vzr.jpg" alt="Курсы по академичеcкой живописи в Минске">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Академическая живопись".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
@@ -223,10 +223,10 @@
 						<img src="images/sculpting.jpg" alt="Курсы по скульптуре. Подготовка к поступлению.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Скульптура для поступающих".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Скульптура"</p>
 							<p>Подростковая группа (14-18 лет)</p>
 						</div>
@@ -241,10 +241,10 @@
 						<img src="images/sculpting-project.jpg" alt="Курсы по скульптуре. Индивидуальные занятия.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Интерьерная скульптура. Индивидуальные занятия".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Курс по интерьерной скульптуре для любого уровня подготовки. Полное выполнение одного проекта от штрихов до отливки в материал (гипс). Стоимость материала включена в стоимость.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
@@ -259,10 +259,10 @@
 						<img src="images/anatomy.jpg" alt="Курсы по пластической анатомии в Минске.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Пластическая анатомия для художников".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Курс по изучению пластической анатомии, групп мышц, образующих рельеф и пластику тела. Без этих знаний невозможно грамотно изобразить человеческую натуру. Курс длится 2 месяца.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
@@ -277,10 +277,10 @@
 						<img src="images/coloristic.jpg" alt="Курсы по цветоведению и композиции в Минске.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Цветоведение и композиция".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Теория цвета, гармония цвета, психология цвета, основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1,5 месяца.</p>
 							<p>Взрослые и подростки (от 14 лет)</p>
 						</div>
@@ -295,10 +295,10 @@
 						<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Иллюстрация для новичков".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Иллюстрация для начального уровня. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
@@ -313,10 +313,10 @@
 						<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
 					<div class="course-description">
-						<h2 class="course-header">
+						<h2 class="course-header" property="name">
 							Курс "Иллюстрация ПРОФИ".
 						</h2>
-						<div class="course-about">
+						<div class="course-about" property="description">
 							<p>Иллюстрация для профессионалов. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
@@ -329,7 +329,7 @@
 	 	</div>
 	</section>
 
-	<section class="teachers">
+	<section class="teachers" property="employee">
 		<div class="balls-wrapper">	
 			<div class="balls"></div>
 		</div>
@@ -419,8 +419,8 @@
 	<section class="find-us" id="particles-js">
 		<div class="container">
 			<h2>Контакты.</h2>
-			<p class='adress'>  <strong>АДРЕС: </strong> г.Минск, ул. Матусевича 23, 208<br> (Здание бывшего детского сада, 2 этаж) </p>
-			<div class="phone">	<strong>Телефон: </strong> <a href="tel:+375296633164">+375 29 66-33-164</a> </div>
+			<p class='adress' property="address">  <strong>АДРЕС: </strong> г.Минск, ул. Матусевича 23, 208<br> (Здание бывшего детского сада, 2 этаж) </p>
+			<div class="phone">	<strong>Телефон: </strong> <a property="telephone href="tel:+375296633164">+375 29 66-33-164</a> </div>
 			<a class="insta" href="https://www.instagram.com/studiya.aquarelle/">Мы в Instagram</a>
 			<div class="ways-to-studio">
 				<div class="way">
@@ -439,10 +439,10 @@
 			<div class="mob">Мы на карте.</div>
 		</div>
 		
-		<div class="for-map">
+		<div class="for-map" property="location">
 			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="300px" frameborder="0"></iframe>
 		</div>
-		<div class="unp">
+		<div class="unp" property="legalName">
 			ИП Домбровская - УНП 193072191
 		</div>
 <!-- GOOGLE MAP -->
