--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
 	 <section class="courses" property="mainEntityOfPage">
 	 	<div class="container">
 	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
-		
+
+			<a href="Курсы рисования в Минске - студия Акварель.pdf">Скачать перечень курсов рисования</a>
+	 		
+	
 			<div class="courses-list" property="makesOffer">
 
 				<div class="course-card course-1">
@@ -420,7 +423,7 @@
 		<div class="container">
 			<h2>Контакты.</h2>
 			<p class='adress' property="address">  <strong>АДРЕС: </strong> г.Минск, ул. Матусевича 23, 208<br> (Здание бывшего детского сада, 2 этаж) </p>
-			<div class="phone">	<strong>Телефон: </strong> <a property="telephone href="tel:+375296633164">+375 29 66-33-164</a> </div>
+			<div class="phone">	<strong>Телефон: </strong> <a property="telephone" href="tel:+375296633164">+375 29 66-33-164</a> </div>
 			<a class="insta" href="https://www.instagram.com/studiya.aquarelle/">Мы в Instagram</a>
 			<div class="ways-to-studio">
 				<div class="way">
