menu for desctop added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Cтудия Акварель - самая уютная школа рисования в Минске.</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#a1fcff">
+    <meta name="yandex-verification" content="72eb25d31231b08c" />
+    <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
 
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
@@ -62,6 +64,38 @@
 		</div>
 
 	</div>
+
+	<nav>
+		<div class="menu">
+			<div class="menu-btn animated-logo" data-link=".header"></div>
+			<div class="menu-btn about-us" data-link=".main-text">
+				<div class="circle"></div>
+				<div class="txt">О нас</div>
+			</div>
+			<div class="menu-btn courses-prices" data-link=".courses">
+				<div class="circle"></div>
+				<div class="txt">Курсы</div>
+			</div>
+			<div class="menu-btn super-teachers" data-link=".teachers">
+				<div class="circle"></div>
+				<div class="txt">Учителя</div>
+			</div>
+			<div class="menu-btn students-work" data-link=".our-students">
+				<div class="circle"></div>
+				<div class="txt">Работы</div>
+			</div>
+			<div class="menu-btn contacts" data-link=".find-us">
+				<div class="circle"></div>
+				<div class="txt">Контакты</div>
+			</div>
+			<div class="menu-btn call-us">
+				<div class="circle-mob"></div>
+				<div class="txt"> <a href="tel:+375296633164">+37529 6633164</a><br>Звоните!</div>
+			</div>
+		</div>
+	</nav>
+
+
 
 	<section class="main-text">
 	 	<div class="container main-text-content">
@@ -144,7 +178,7 @@
 	 	<div class="container">
 	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
 
-			<a href="Курсы рисования в Минске - студия Акварель.pdf">Скачать перечень курсов рисования</a>
+			<a href="Курсы рисования в Минске - студия Акварель.pdf">Курсы рисования в Минске - скачать pdf- файл.</a>
 	 		
 	
 			<div class="courses-list" property="makesOffer">
