--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="circle"></div>
 				<div class="txt">Контакты</div>
 			</div>
-			<div class="menu-btn call-us">
+			<div class="menu-bt call-us">
 				<div class="circle-mob"></div>
 				<div class="txt"> <a href="tel:+375296633164">+37529 6633164</a><br>Звоните!</div>
 			</div>
