favicon description robots sitemap

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="theme-color" content="#a1fcff">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
+    <meta name="description" content="Ищете хорошие курсы рисования в Минске?- Звоните +37529 6633164. Подготовка к поступлению, курсы рисования для начинающих, курсы рисунка для взрослых, творческая атмосфера, хорошие цены." />        
+    <meta name="keywords" content="Курсы рисования, минск, художественная школа, академический рисунок, скульптура, курсы рисунка" />    
 
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
@@ -15,6 +17,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style-gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/elastislide.css" />
 
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
