mobile menu added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 				<div class="txt">Контакты</div>
 			</div>
 			<div class="menu-bt call-us">
-				<div class="circle-mob"></div>
+				<a href="tel:+375296633164">
+					<div class="circle-mob"></div>
+				</a>
 				<div class="txt"> <a href="tel:+375296633164">+37529 6633164</a><br>Звоните!</div>
 			</div>
 		</div>
