FALLBACK FOR PERFOMANCE

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 							<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
 							<p>Подростковая группа (14-18 лет).</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 100 руб/мес</p>
-						</div>
 					</div>
 				</div>
 
@@ -142,9 +142,9 @@
 							<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 120 руб/мес</p>
-						</div>
 					</div>
 				</div>
 
@@ -160,9 +160,9 @@
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
 							<p>Подростковая группа (14-18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 100 руб/мес</p>
-						</div>
 					</div>
 				</div>
 
@@ -178,9 +178,9 @@
 							<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 120 руб/мес</p>
-						</div>
 					</div>
 				</div>
 
@@ -196,9 +196,9 @@
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Скульптура"</p>
 							<p>Подростковая группа (14-18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 150 руб/мес</p>
-						</div>
 					</div>
 				</div>
 
@@ -214,9 +214,9 @@
 							<p>Курс по интерьерной скульптуре для любого уровня подготовки. Полное выполнение одного проекта от штрихов до отливки в материал (гипс). Стоимость материала включена в стоимость.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 300 руб/курс</p>
-						</div>
 					</div>
 				</div>
 
@@ -232,9 +232,9 @@
 							<p>Курс по изучению пластической анатомии, групп мышц, образующих рельеф и пластику тела. Без этих знаний невозможно грамотно изобразить человеческую натуру. Курс длится 2 месяца.</p>
 							<p>Взрослая группа (от 18 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 390 руб/курс</p>
-						</div>
 					</div>
 				</div>
 
@@ -250,9 +250,9 @@
 							<p>Теория цвета, гармония цвета, психология цвета, основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1,5 месяца.</p>
 							<p>Взрослые и подростки (от 14 лет)</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 150 руб/курс</p>
-						</div>
 					</div>
 				</div>
 
@@ -268,9 +268,9 @@
 							<p>Иллюстрация для начального уровня. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 320 руб/курс</p>
-						</div>
 					</div>
 				</div>
 
@@ -286,9 +286,9 @@
 							<p>Иллюстрация для профессионалов. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
-						<div class="course-price">
+					</div>
+					<div class="course-price">
 							<p>цена 240 руб/курс</p>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -303,7 +303,7 @@
 			<h1 property="name">Студия "Акварель" - самые уютные курсы рисования в Минске.</h1>
 
 			<div class="main-block-1">
-				<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответветсвующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
+				<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответствующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
 				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
 				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
 				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
@@ -521,10 +521,10 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/ScrollMagic.min.js"></script>
-    <script src="js/debug.addIndicators.min.js"></script>
-	<script src="js/TweenMax.min.js"></script>
-	<script src="js/CSSRulePlugin.min.js"></script>
-	<script src="js/animation.gsap.js"></script>
+    <!-- <script src="js/debug.addIndicators.min.js"></script> -->
+	<!-- <script src="js/TweenMax.min.js"></script> -->
+	<!-- <script src="js/CSSRulePlugin.min.js"></script> -->
+	<!-- <script src="js/animation.gsap.js"></script> -->
 	<script src="js/granim.min.js"></script>
 	<!-- <script src="js/particles.min.js"></script> -->
 
