--- a/painting-course-for-enrollee-minsk.html
+++ b/painting-course-for-enrollee-minsk.html
@@ -45,8 +45,8 @@
 <div class="header-programm">
 	<div class="container">
 		<h1>Программа курса "Живопись для поступающих"</h1>
-		<p>Краски у нас – орудие, они должны выражать наши мысли. Колорит наш – не изящные пятна, он должен выражать нам настроение картины, ее душу, он должен расположить и захватить всего зрителя, как аккорд в музыке.</p>
-		<p>Илья Репин</p>
+		<p class='wise-painter-said'>Краски у нас – орудие, они должны выражать наши мысли. Колорит наш – не изящные пятна, он должен выражать нам настроение картины, ее душу, он должен расположить и захватить всего зрителя, как аккорд в музыке.</p>
+		<p class='signature'>Илья Репин</p>
 		<table class="table " border="1">
 			<tr>
 				<th class="t_numb">номер</th>
