--- a/drawing-course-minsk.html
+++ b/drawing-course-minsk.html
@@ -30,7 +30,16 @@
 <body>
 
 
-
+<nav>
+	<div class="main-page-btn">
+		<a href="index.html">
+			<div class="btn-text">
+				Вернуться на главную
+			</div>
+		</a>
+		
+	</div>
+</nav>
 
 
 <div class="header-programm">
@@ -76,7 +85,7 @@
 			<tr>
 				<td class="t_numb">6</td>
 				<td class="t_name">Розетка (симметричная и ассиметричная).</td>
-				<td class="t_desc">Построение гипсовой розетки, передача материала и пластики деталей.</td
+				<td class="t_desc">Построение гипсовой розетки, передача материала и пластики деталей.</td>
 				<td class="t_time">12</td>
 			</tr>
 			<tr>
@@ -105,7 +114,7 @@
 			</tr>
 			<tr>
 				<td class="t_numb">11</td>
-				<td class="t_name">Гипсовая голова с плечевым поясом.</td
+				<td class="t_name">Гипсовая голова с плечевым поясом.</td>
 				<td class="t_desc">Строение плечевого пояса. Тоновой рисунок.</td>
 				<td class="t_time">25</td>
 			</tr>
