--- a/sculpting-course-for-enrollee-minsk.html
+++ b/sculpting-course-for-enrollee-minsk.html
@@ -30,7 +30,16 @@
 <body>
 
 
-
+<nav>
+	<div class="main-page-btn">
+		<a href="index.html">
+			<div class="btn-text">
+				Вернуться на главную
+			</div>
+		</a>
+		
+	</div>
+</nav>
 
 
 <div class="header-programm">
