new photos && illustrtion programm

--- a/index.html
+++ b/index.html
@@ -249,18 +249,17 @@
 						</div>
 					</div>
 				</a>
-
-
+					
 				<div class="course-card course-8">
 					<div class="course-image">
-						<img src="images/coloristic.jpg" alt="Курсы по цветоведению и композиции в Минске.">
+						<img src="images/coloristic.jpg" alt="Курсы по цветоведению в Минске.">
 					</div>
 					<div class="course-description">
 						<h2 class="course-header" property="name">
-							Курс "Цветоведение и композиция".
+							Курс "Цветоведение".
 						</h2>
 						<div class="course-about" property="description">
-							<p>Теория цвета, гармония цвета, психология цвета, основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1,5 месяца.</p>
+							<p>Теория цвета, гармония цвета, психология цвета, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
 							<p>Взрослые и подростки (от 14 лет)</p>
 						</div>
 					</div>
@@ -269,41 +268,64 @@
 					</div>
 				</div>
 
-				<div class="course-card course-9">
+				<div class="course-card course-8">
 					<div class="course-image">
-						<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
+						<img src="images/composition.jpg" alt="Курсы по композиции в Минске.">
 					</div>
 					<div class="course-description">
 						<h2 class="course-header" property="name">
-							Курс "Иллюстрация для новичков".
+							Курс "Композиция".
 						</h2>
 						<div class="course-about" property="description">
-							<p>Иллюстрация для начального уровня. </p>
-							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+							<p>Основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
+							<p>Взрослые и подростки (от 14 лет)</p>
 						</div>
 					</div>
 					<div class="course-price">
-							<p>цена 320 руб/курс</p>
+							<p>цена 150 руб/курс</p>
 					</div>
 				</div>
 
-				<div class="course-card course-10">
-					<div class="course-image">
-						<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
-					</div>
-					<div class="course-description">
-						<h2 class="course-header" property="name">
-							Курс "Иллюстрация ПРОФИ".
-						</h2>
-						<div class="course-about" property="description">
-							<p>Иллюстрация для профессионалов. </p>
-							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+				<a href="illustration-course-for-beginer-minsk.html">
+					<div class="course-card course-9">
+						<div class="course-image">
+							<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
+						</div>
+						<div class="course-description">
+							<h2 class="course-header" property="name">
+								Курс "Иллюстрация для новичков".
+							</h2>
+							<div class="course-about" property="description">
+								<p>Иллюстрация для начального уровня. </p>
+								<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+							</div>
+						</div>
+						<div class="course-price">
+								<p>цена 320 руб/курс</p>
 						</div>
 					</div>
-					<div class="course-price">
-							<p>цена 240 руб/курс</p>
+				</a>
+
+				<a href="illustration-course-for-professional-minsk.html">
+					<div class="course-card course-10">
+						<div class="course-image">
+							<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
+						</div>
+						<div class="course-description">
+							<h2 class="course-header" property="name">
+								Курс "Иллюстрация ПРОФИ".
+							</h2>
+							<div class="course-about" property="description">
+								<p>Иллюстрация для профессионалов. </p>
+								<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+							</div>
+						</div>
+						<div class="course-price">
+								<p>цена 240 руб/курс</p>
+						</div>
 					</div>
-				</div>
+				</a>
+				
 			</div>
 	 	</div>
 	</section>
@@ -395,10 +417,10 @@
 			<div class="container">
 			<h2>Наши преподаватели.</h2>
 			<div class="teacher-photo photo-down">
-				<img src="images/girls-down-1.png" alt="">
+				<img src="images/aqua-girls-1.png" alt="">
 			</div>
 			<div class="teacher-photo photo-up">
-				<img src="images/girls-up-1.png" alt="">
+				<img src="images/aqua-girls-2.png" alt="">
 			</div>
 			<div class="description">
 				<div class="natasha teacher">
