some fixes about header proportions at notebooks

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 					<div class="about-teacher">
 						Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
 						Скульптор, художник.<br>
-						Опыт преподавания - : 6 лет. (Рисунок, скульптура, анатомия)
+						Опыт преподавания - 6 лет. (Рисунок, скульптура, анатомия)
 					</div>
 				</div>
 				<div class="nastya teacher">
