--- a/painting-course-for-enrollee-minsk.html
+++ b/painting-course-for-enrollee-minsk.html
@@ -75,7 +75,7 @@
 			<tr>
 				<td class="t_numb">4</td>
 				<td class="t_name">Типы колорита.</td>
-				<td class="t_desc">Техника акварель. Гпрмония двуады,триады …</td>
+				<td class="t_desc">Техника акварель. Гармония двуады,триады …</td>
 				<td class="t_time">по 11</td>
 			</tr>
 			<tr>
