--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
 	</section>
 
-	<div class="transport link-to-contacts">
+	<div class="transport link-to-contacts string-above-head">
 		<div class="container">
 			<div class="metro">
 				<img src="images/metro.jpg" alt="">
@@ -531,7 +531,7 @@
 				<img src="images/bus.jpg" alt="">
 			</div>
 			<div class="busbus">
-				<p> 11, 28, 29, 40, 41, 46, 49,<br> 54, 62Э, 78, 107, 126, 293П </p>
+				<p> 11, 28, 29, 40, 41, 46, 49, 50,<br> 54, 62Э, 78, 107, 126, 293П </p>
 			</div>
 			<div class="trall">
 				<img src="images/trall.jpg" alt="">
@@ -539,6 +539,12 @@
 			<div class="tralleibus">
 				<p> 7, 8, 13, 31, 44, 77 </p>
 			</div>
+		</div>
+	</div>
+
+	<div class="free-lesson link-to-contacts string-above-head">
+		<div class="container">
+			<p>Приходите на бесплатное пробное занятие!</p>
 		</div>
 	</div>
 
