программы все + sitemap.xml

--- a/index.html
+++ b/index.html
@@ -232,44 +232,8 @@
 							<p>цена 390 руб/курс</p>
 					</div>
 				</div>
-				
-				<div class="course-card course-8">
-					<div class="course-image">
-						<img src="images/coloristic.jpg" alt="Курсы по цветоведению в Минске.">
-					</div>
-					<div class="course-description">
-						<h2 class="course-header" property="name">
-							Курс "Цветоведение".
-						</h2>
-						<div class="course-about" property="description">
-							<p>Теория цвета, гармония цвета, психология цвета, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
-							<p>Взрослые и подростки (от 14 лет)</p>
-						</div>
-					</div>
-					<div class="course-price">
-							<p>цена 150 руб/курс</p>
-					</div>
-				</div>
 
-				<div class="course-card course-8">
-					<div class="course-image">
-						<img src="images/composition.jpg" alt="Курсы по композиции в Минске.">
-					</div>
-					<div class="course-description">
-						<h2 class="course-header" property="name">
-							Курс "Композиция".
-						</h2>
-						<div class="course-about" property="description">
-							<p>Основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
-							<p>Взрослые и подростки (от 14 лет)</p>
-						</div>
-					</div>
-					<div class="course-price">
-							<p>цена 150 руб/курс</p>
-					</div>
-				</div>
-
-				<div class="course-card course-9">
+				<div class="course-card course-7">
 					<div class="course-image">
 						<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
@@ -292,7 +256,7 @@
 					</div>
 				</div>
 			
-				<div class="course-card course-10">
+				<div class="course-card course-8">
 					<div class="course-image">
 						<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
@@ -314,6 +278,54 @@
 							<p>цена 240 руб/курс</p>
 					</div>
 				</div>
+
+				<div class="course-card course-9">
+					<div class="course-image">
+						<img src="images/coloristic.jpg" alt="Курсы по цветоведению в Минске.">
+					</div>
+					<div class="course-description">
+						<h2 class="course-header" property="name">
+							Курс "Цветоведение".
+						</h2>
+						<div class="course-about" property="description">
+							<p>Теория цвета, гармония цвета, психология цвета, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
+							<p>Взрослые и подростки (от 14 лет)</p>
+						</div>
+					</div>
+					<a href="coloristic-course-minsk.html">
+						<div class="to-see-the-programm">
+							<p>Программа курса</p>
+						</div>
+					</a>
+					<div class="course-price">
+							<p>цена 150 руб/курс</p>
+					</div>
+				</div>
+
+				<div class="course-card course-10">
+					<div class="course-image">
+						<img src="images/composition.jpg" alt="Курсы по композиции в Минске.">
+					</div>
+					<div class="course-description">
+						<h2 class="course-header" property="name">
+							Курс "Композиция".
+						</h2>
+						<div class="course-about" property="description">
+							<p>Основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1 месяц.</p>
+							<p>Взрослые и подростки (от 14 лет)</p>
+						</div>
+					</div>
+					<a href="composition-course-minsk.html">
+						<div class="to-see-the-programm">
+							<p>Программа курса</p>
+						</div>
+					</a>
+					<div class="course-price">
+							<p>цена 150 руб/курс</p>
+					</div>
+				</div>
+
+
 			</div>
 	 	</div>
 	</section>
